--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 python-terrier>=0.10.0
 pandas>=1.3.0
 numpy>=1.21.0
+tqdm>=4.64.0
+loguru>=0.6.0
 transformers>=4.30.0
 torch>=1.13.0
-tqdm>=4.64.0
 bitsandbytes>=0.39.0
 accelerate>=0.20.0
-loguru>=0.6.0
-pathlib
+sentence-transformers>=2.2.0
